<resources>
    <string name="app_name">Pico₂ξmeter</string>
    <string name="main_button">Connect</string>
    <string name="main_introduction">Please connect to your device to continue.</string>
    <string name="ble_hr">Heart Rate: </string>
    <string name="ble_spo2">SpO₂: </string>
    <string name="ble_hr_unit">bpm</string>
    <string name="ble_spo2_unit">%</string>
    <string name="ble_spo2_value">-</string>
    <string name="ble_hr_value">-</string>
    <string name="scan_button_enabled">Scan</string>
    <string name="scan_button_disabled">Scanning...</string>
    <string name="about_page">Pulse Oximetry App\nPico₂ξmeter\n\nDeveloped in 2021/22 by Ivo Opitz.\n\nVersion 1.2</string>
    <string name="short_app_name">pico₂ξ</string>
    <string name="ble_toast_connected">Connected</string>
    <string name="scan_title">BLE Device Scanner</string>
    <string name="ble_title">Pulse Oximeter</string>
    <string name="scan_toast_stopped">Scan stopped</string>
    <string name="scan_bt_permission_text">This app needs bluetooth to be activated for it to connect to your device.</string>
    <string name="scan_bt_permission_title">Bluetooth</string>
    <string name="scan_pos_permission_text">Bluetooth needs access to your location.</string>
    <string name="scan_pos_permission_title">Location</string>
    <string name="title_activity_how_to">Instructions</string>
    <string name="tab_text_1">On/Off</string>
    <string name="tab_text_2">Data</string>
    <string name="howto_text_on">Slide the switch forward to turn on the device. When you are finished reverse the action to turn the device off.</string>
    <string name="howto_text_reading">Slider your finger in the clasp. The values will show your heart rate and oxygen saturation.</string>
    <string name="tab_text_3">App</string>
    <string name="howto_text_connect">Press the \"Connect\" Button on the home screen to find the device over Bluetooth.\nYou can also use the one  below.</string>
    <string name="howto_reading_desc">Image of a finger slid into a pulseoximeter clamp. The pulseoximeter shows heart rate and oxygen saturation values.</string>
    <string name="howto_onoff_desc">Image of a pulseoximeter. On the left side is a switch. It is indicated that it should be moved towards the front of the device.</string>
    <string name="menu_about">About</string>
    <string name="menu_howTo">Instructions</string>
    <string name="start_alert_ok">Take me to the instructions.</string>
    <string name="start_alert_no">Remain on the main page.</string>
    <string name="start_alert_text">It appears you are opening this app for the first time. Do you want to see instructions on your device and application?</string>
    <string name="start_alert_title">First Start</string>
    <string name="menu_past_readings">Past Readings</string>
    <string name="empty_not_saved">Data was not saved.</string>
    <string name="ble_save">Save</string>
    <string name="past_hr" translatable="false"> %1$s bpm</string>
    <string name="past_spo2" translatable="false"> %1$s %%</string>
    <string name="past_fab_desc">Open more options.</string>
    <string name="past_fab_del_all_desc">Delete all entries.</string>
    <string name="past_fab_del_sin_desc">Delete the entry.</string>
    <string name="past_fab_sort_desc">Select how to sort the entries.</string>
    <string name="past_fab_edit_desc">Edit the tag on the entry.</string>
    <string name="past_fab_title_del_all">Delete all</string>
    <string name="past_fab_title_del_sin">Delete selected</string>
    <string name="past_fab_title_edit">Edit Tag</string>
    <string name="past_fab_title_sort">Sort</string>
    <string name="form_tag_sport">Sport</string>
    <string name="form_tag_resting">Resting</string>
    <string name="form_tag_custom">Custom</string>
    <string name="form_save">Save</string>
    <string name="form_tag_desc">Tag</string>
    <string name="form_string_empty">Please enter a tag.</string>
    <string name="sort_spinner_asc">Old entries first.</string>
    <string name="sort_spinner_desc">New entries first.</string>
    <string name="sort_spinner_description">Order of the list:</string>
    <string name="sort_newest_date_description">Newest Date:</string>
    <string name="sort_oldest_date_description">Oldest Date:</string>
    <string name="sort_tag_description">Select tags (optional):</string>
    <string name="scan_12_permission_title">Scan for Bluetooth Devices</string>
    <string name="scan_12_permission_text">To find your device, this app needs permission to scan for Bluetooth devices.</string>
    <string name="scan_pos_permission_denied_text">This app has been denied access to your location. These are necessary by Android to use Bluetooth. Please enable this permission in your system settings.</string>
    <string name="scan_12_permission_denied_text">This app has been denied access to  Bluetooth. Please enable this permission in your system settings.</string>
    <string name="bp_diastolic">"Diastolic: "</string>
    <string name="bp_systolic">"Systolic: "</string>
    <string name="readings_pulox">Pulseoximeter</string>
    <string name="readings_bp">Blood Pressure</string>
    <string name="bp_unit" translatable="false">mmHg</string>
    <string name="past_bp" translatable="false">%1$s mmHg</string>
    <string name="sort_type_title">Type of the Reading</string>
    <string name="ble_toast_disconnected">Connection lost</string>
    <string name="data_saved">Data saved</string>
    <string name="data_edit_saved">Data edited</string>
</resources>